# Meriwether

./: .gitignore  README.md  meriwether.cabal
src/Meriwether/App/: Main.hs
src/Meriwether/GDL/: Model.hs  Parser.hs  Query.hs  Substitution.hs  Test.hs  Unification.hs
src/Meriwether/Test/: Runner.hs
